--- a/css/styles.css
+++ b/css/styles.css
@@ -146,18 +146,7 @@ footer h5 {transform: translateY(-30px);}
 }
 
 /* --- Sección Nosotros --- */
-.nosotros {
-    display: grid;
-    height: 90vh;
-    width: 100%;
-    grid-template-columns: 480px auto;
-    grid-template-rows: auto auto;
-}
 
-.nosotros div{
-    object-fit: contain;
-    overflow: hidden;
-}
 
 .nosotros h3 {
     border: solid 2px;
@@ -172,9 +161,30 @@ footer h5 {transform: translateY(-30px);}
     transform: translateY(-30%);
 }
 
+.mesas {
+    height: 270px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    object-fit: cover;
+}
+
+@keyframes aparicion {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .presentacion {
+    padding: 5px;
     animation-duration: 3s;
-    animation-name: slide-in;
+    animation-name: aparicion;
+    padding: 50px;
+    border-style: solid;
+    border-radius: 10px;
 }
 
 /* ------------------------ */
@@ -224,44 +234,16 @@ form {
 
 #map {max-width: 100vw;}
 
-
-#donde {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 10% 90%;
-    grid-template-areas: 
-        "encontranos encontranos"
-        "map         jrpass";
-}
-
-.donde__estamos {
-    grid-area: encontranos;
-}
-
-
 .ubicacion {
     background-color: hsla(0, 0%, 87%, 0.549);
     flex-flow: row nowrap;
 }
 
-#jrpass {grid-area: jrpass;}
-#map {grid-area: map;}
-
-.ubicacion #jrpass {
-    display: flex;
-    border-style: solid;
-    border-radius: 5px;
-    padding: 10px;
-    width: 300px;
-    max-width: 100vw;
-    height: 200px;
-    margin-left: 50px;
-    text-align: center;
-    margin-top: 100px;
-    flex-direction: column;
-    justify-content: center;
-    font-style: italic;
+.travel {
+    object-fit: fill;
 }
+
+
 
 /* --------- iPad ------------ */
 @media screen and (max-width: 768px) {
@@ -279,12 +261,13 @@ form {
     flex-direction: column;
     height: 100vh;
    }
-   /* Mosotros */
-   .nosotros {
-       display: flex;
-       flex-direction: column;
-       max-width: 375px;
-   }
+
+   .nosotros .col-3 iframe {
+    height: auto;
+    width: auto;
+    max-width: 100vw;
+}
+
    .nosotros h3 {
        font-size: auto;
    }
@@ -313,10 +296,16 @@ form {
     footer {
         transform: translateY(600px);
     }
-    .nosotros {
+/*     .nosotros {
         display: flex;
         flex-direction: column;
         width: 100vw;
+    } */
+
+    .nosotros .col-3 iframe {
+        height: auto;
+        width: auto;
+        max-width: 100vw;
     }
 
     article h3 {
@@ -333,4 +322,10 @@ form {
         transform: scale(0.7);
     }
 
+}
+
+@media screen and (min-width: 992px) {
+    #inicio-navbar {
+        display: none;
+    }
 }
