--- a/style.css
+++ b/style.css
@@ -1,1 +1,316 @@
-*{padding:0;margin:0;box-sizing:border-box;font-family:"Gill Sans","Gill Sans MT",Calibri,"Trebuchet MS",sans-serif}#header{background-color:#f9d048;height:110px}.nav-link{color:#000}#brand{box-sizing:border-box;transform:translate(-25px, -5px)}body{background-color:#f6f2f2}main article{display:grid;grid-template-columns:repeat(2, 1fr);justify-items:center;background-color:#f6f2f2}.bienvenidos{border-style:solid;font-family:Verdana,Geneva,Tahoma,sans-serif;padding:30px;border-radius:5px;margin-top:30px;color:#fff;text-align:center;background-color:rgba(18,17,17,.823)}article #left h1,article .cocina,article h3{display:flex;justify-content:center;padding-top:20px;padding-bottom:20px;width:100%}.cocina{transition:.5s}.cocina:hover{transform:scale(1.1)}.guante{justify-self:center;padding-left:20vw;padding-bottom:10%;transition:.5s}.guante:hover{transform:rotate(20deg)}article #right{border:solid 2px;border-radius:5px;display:flex;justify-content:center;align-items:center;font-size:26px;padding:32px;margin:30px}#parrafo{font-style:italic;animation-duration:3s;animation-name:slide-in}@keyframes slide-in{from{margin-top:100%;width:300%}to{margin-left:0%;width:100%}}section div ul{background-color:#ecc226;height:40px;padding:0px 50px;display:flex;justify-content:space-between;align-items:center;transform:translateY(1rem)}.lugar{text-align:center}.item{background-color:none;list-style:none;color:#000;text-decoration:none}footer{display:flex;bottom:100%;width:100%;height:80px;background-color:bisque;padding-top:50px;padding-left:25px;justify-content:space-between;align-items:center;align-items:flex-end}footer h5{transform:translateY(-30px)}.cara{height:100px;width:100px;transition:1s}.cara:hover{transform:rotate(360deg)}.table{background-image:url(../imagenes/guante.png);border-color:#000}#map{max-width:100vw}.ubicacion{background-color:rgba(222,222,222,.549);flex-flow:row nowrap}.travel{object-fit:fill;transform:translateY(1rem)}@media screen and (max-width: 768px){section div ul{display:none}article{display:flex;flex-direction:column;height:100vh}.nosotros .col-3 iframe{height:auto;width:auto;max-width:100vw}.nosotros h3{font-size:auto}#donde{display:flex;flex-direction:column;justify-content:center}nav ul a{padding:10%}footer{margin-top:100vh}}@media screen and (max-width: 375px){footer{transform:translateY(600px)}.nosotros .col-3 iframe{height:auto;width:auto;max-width:100vw}article h3{max-width:100vw;max-height:100vh}article div{max-width:100vw}.contacto{height:100vh}#jrpass{transform:scale(0.7)}}@media screen and (min-width: 992px){#inicio-navbar{display:none}}.contacto{display:grid;grid-template-columns:1fr}.contacto .formulario{height:100vh}.formulario{display:flex;padding:2%;justify-content:center}.formulario h2{display:flex;padding-bottom:20px;justify-content:center}form{padding:2%}.reservas{border-style:solid;border-radius:10px}.btn-primary{background-color:hwb(47 15% 7%);color:#000;margin-top:10px}.nosotros h3{border:solid 2px;border-radius:5px;padding:5%;margin-bottom:5%}.nosotros div .opm{height:400px;width:400px;transform:translateY(-30%)}.mesas{height:270px;width:100%;margin:0;padding:0;object-fit:cover}@keyframes aparicion{from{opacity:0}to{opacity:1}}.presentacion{padding:5px;animation-duration:3s;animation-name:aparicion;padding:50px;border-style:solid;border-radius:10px}
+@charset "UTF-8";
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+#header {
+  background-color: rgb(249, 208, 72);
+  height: 110px;
+}
+
+.nav-link {
+  color: black;
+}
+
+#brand {
+  box-sizing: border-box;
+  transform: translate(-25px, -5px);
+}
+
+body {
+  background-color: rgb(246, 242, 242);
+}
+
+main article {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  background-color: rgb(246, 242, 242);
+}
+
+.bienvenidos {
+  border-style: solid;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 30px;
+  border-radius: 5px;
+  margin-top: 30px;
+  color: white;
+  text-align: center;
+  background-color: hsla(0deg, 3%, 7%, 0.823);
+}
+
+/* Estilo para la parte izzquierda del index */
+article #left h1, article .cocina, article h3 {
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 100%;
+}
+
+.cocina {
+  transition: 0.5s;
+}
+.cocina:hover {
+  transform: scale(1.1);
+}
+
+.guante {
+  justify-self: center;
+  padding-left: 20vw;
+  padding-bottom: 10%;
+  transition: 0.5s;
+}
+.guante:hover {
+  transform: rotate(20deg);
+}
+
+article #right {
+  /* Estilo para la parte derecha */
+  border: solid 2px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 26px;
+  padding: 32px;
+  margin: 30px;
+}
+
+#parrafo {
+  font-style: italic;
+  animation-duration: 3s;
+  animation-name: slide-in;
+}
+
+@keyframes slide-in {
+  from {
+    margin-top: 100%;
+    width: 300%;
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+/* Menú de navegación inferior */
+section div ul {
+  background-color: #ecc226;
+  height: 40px;
+  padding: 0px 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transform: translateY(1rem);
+}
+
+/* ----------------------------- */
+.lugar {
+  text-align: center;
+}
+
+.item {
+  background-color: none;
+  list-style: none;
+  color: black;
+  text-decoration: none;
+}
+
+footer {
+  display: flex;
+  bottom: 100%;
+  width: 100%;
+  height: 80px;
+  background-color: bisque;
+  padding-top: 50px;
+  padding-left: 25px;
+  justify-content: space-between;
+  align-items: center;
+  align-items: flex-end;
+}
+footer h5 {
+  transform: translateY(-30px);
+}
+
+.cara {
+  height: 100px;
+  width: 100px;
+  transition: 1s;
+}
+
+.cara:hover {
+  transform: rotate(360deg);
+}
+
+/* --- Sección Nosotros --- */
+/* ------------------------ */
+/* --- Sección Nuestros tragos */
+/* --------------------------- */
+/* --- Sección Contacto --- */
+/* -------------------------- */
+/* --- Sección Dónde encontrarnos --- */
+/* --------- iPad ------------ */
+@media screen and (max-width: 768px) {
+  section div ul {
+    display: none;
+  }
+
+  article {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+  }
+
+  .nosotros .col-3 iframe {
+    height: auto;
+    width: auto;
+    max-width: 100vw;
+  }
+
+  .article div h3 {
+    font-size: auto;
+  }
+
+  #donde {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  /*   nav ul a {
+      padding: 10%;
+    } */
+  /* Fin sidebar */
+  footer {
+    margin-top: 100vh;
+  }
+}
+/* ----------------------------- */
+/* --- Mobile --- */
+@media screen and (max-width: 375px) {
+  footer {
+    transform: translateY(600px);
+  }
+
+  .nosotros .col-3 iframe {
+    height: auto;
+    width: auto;
+    max-width: 100vw;
+  }
+
+  article h3 {
+    max-width: 100vw;
+    max-height: 100vh;
+  }
+
+  article div {
+    max-width: 100vw;
+  }
+
+  .contacto {
+    height: 100vh;
+  }
+
+  #jrpass {
+    transform: scale(0.7);
+  }
+}
+@media screen and (min-width: 992px) {
+  #inicio-navbar {
+    display: none;
+  }
+}
+.contacto {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.contacto .formulario {
+  height: 100vh;
+}
+
+.formulario {
+  display: flex;
+  padding: 2%;
+  justify-content: center;
+}
+.formulario h2 {
+  display: flex;
+  padding-bottom: 20px;
+  justify-content: center;
+}
+
+form {
+  padding: 2%;
+}
+
+.reservas {
+  border-style: solid;
+  border-radius: 10px;
+}
+
+.btn-primary {
+  background-color: hwb(47 15% 7%);
+  color: black;
+  margin-top: 10px;
+}
+
+.nosotros h3 {
+  border: solid 2px;
+  border-radius: 5px;
+  padding: 5%;
+  margin-bottom: 5%;
+}
+.nosotros div .opm {
+  height: 400px;
+  width: 400px;
+  transform: translateY(-30%);
+}
+
+.mesas {
+  height: 270px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  object-fit: cover;
+}
+
+@keyframes aparicion {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.presentacion {
+  padding: 5px;
+  animation-duration: 3s;
+  animation-name: aparicion;
+  padding: 50px;
+  border-style: solid;
+  border-radius: 10px;
+}
+
+.table {
+  background-image: url(../imagenes/guante.png);
+  border-color: black;
+}
+
+#map {
+  max-width: 700px;
+}
+
+.ubicacion {
+  background-color: hsla(0deg, 0%, 87%, 0.549);
+  flex-flow: row nowrap;
+}
+
+.travel {
+  object-fit: fill;
+  transform: translateY(1rem);
+}
+
+/*# sourceMappingURL=style.css.map */
