--- a/style.scss
+++ b/style.scss
@@ -2,3 +2,5 @@
 @import './components/global';
 @import './components/contacto';
 @import './components/nosotros';
+@import './components/nuestrostragos';
+@import './components/dondeencontrarnos';
