--- a/components/_global.scss
+++ b/components/_global.scss
@@ -12,6 +12,7 @@
   height: 110px;
 }
 
+
 .nav-link {
   color: black;
 }
@@ -30,7 +31,6 @@ main {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
-    background-color: rgb(246, 242, 242);
     }
 }
 
@@ -154,31 +154,31 @@ footer {
   transform: rotate(360deg);
 }
 
-/* --- Sección Nosotros --- */
-
-
-/* ------------------------ */
-/* --- Sección Nuestros tragos */
-
-/* --------------------------- */
-/* --- Sección Contacto --- */
-
-/* -------------------------- */
-/* --- Sección Dónde encontrarnos --- */
 
 
 /* --------- iPad ------------ */
 @media screen and (max-width: 768px) {
 
-  section div ul {
+  #navbar {
+    background-color: rgb(249, 208, 72);
+    transform: translate(-15px, -10px);
+    padding-left: 15px;
+    border-bottom-right-radius: 10px;    
+}
+
+  main {
+      article {
+          grid-template-columns: repeat(1, 1fr);
+      }
+      .guante {
+          transform: translateX(80px);
+      }
+  }
+  
+    section div ul {
     display: none;
   }
 
-  article {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-  }
 
   .nosotros .col-3 iframe {
     height: auto;
@@ -195,21 +195,14 @@ footer {
     flex-direction: column;
     justify-content: center;
   }
-
-/*   nav ul a {
-    padding: 10%;
-  } */
-
-  /* Fin sidebar */
-  footer {
-    margin-top: 100vh;
-  }
 }
 /* ----------------------------- */
 /* --- Mobile --- */
 @media screen and (max-width: 375px) {
   footer {
-    transform: translateY(600px);
+      h5 {
+          transform: translateY(1px);
+      }
   }
   
   .nosotros .col-3 iframe {
@@ -223,6 +216,13 @@ footer {
     max-height: 100vh;
   }
 
+  main {
+    .guante {
+        transform: translateX(30px);
+    }
+}
+
+  
   article div {
     max-width: 100vw;
   }
