--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ main article {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   justify-items: center;
-  background-color: rgb(246, 242, 242);
 }
 
 .bienvenidos {
@@ -145,23 +144,24 @@ footer h5 {
   transform: rotate(360deg);
 }
 
-/* --- Sección Nosotros --- */
-/* ------------------------ */
-/* --- Sección Nuestros tragos */
-/* --------------------------- */
-/* --- Sección Contacto --- */
-/* -------------------------- */
-/* --- Sección Dónde encontrarnos --- */
 /* --------- iPad ------------ */
 @media screen and (max-width: 768px) {
-  section div ul {
-    display: none;
+  #navbar {
+    background-color: rgb(249, 208, 72);
+    transform: translate(-15px, -10px);
+    padding-left: 15px;
+    border-bottom-right-radius: 10px;
   }
 
-  article {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
+  main article {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  main .guante {
+    transform: translateX(80px);
+  }
+
+  section div ul {
+    display: none;
   }
 
   .nosotros .col-3 iframe {
@@ -179,20 +179,12 @@ footer h5 {
     flex-direction: column;
     justify-content: center;
   }
-
-  /*   nav ul a {
-      padding: 10%;
-    } */
-  /* Fin sidebar */
-  footer {
-    margin-top: 100vh;
-  }
 }
 /* ----------------------------- */
 /* --- Mobile --- */
 @media screen and (max-width: 375px) {
-  footer {
-    transform: translateY(600px);
+  footer h5 {
+    transform: translateY(1px);
   }
 
   .nosotros .col-3 iframe {
@@ -204,6 +196,10 @@ footer h5 {
   article h3 {
     max-width: 100vw;
     max-height: 100vh;
+  }
+
+  main .guante {
+    transform: translateX(30px);
   }
 
   article div {
