--- a/components/_global.scss
+++ b/components/_global.scss
@@ -8,13 +8,13 @@
 }
 
 #header {
-  background-color: rgb(249, 208, 72);
+  background-color: $bgColor;
   height: 110px;
 }
 
 
 .nav-link {
-  color: black;
+  color: $color;
 }
 
 #brand {
@@ -106,7 +106,7 @@ article #right {
 }
 /* Menú de navegación inferior */
 section div ul {
-  background-color: #ecc226;
+  background-color: $bgColor;
   height: 40px;
   padding: 0px 50px;
   display: flex;
@@ -131,7 +131,7 @@ footer {
   display: flex;
   bottom: 100%;
   width: 100%;
-  height: 80px;
+  height: 200px;
   background-color: bisque;
   padding-top: 50px;
   padding-left: 25px;
@@ -144,14 +144,23 @@ footer {
   }
 }
 
+.derechos {
+  transform: translateY(-100px);
+}
+
+.sitemap {
+  list-style:none;
+  transform: translateY(-30px);
+  &__item {
+    color: black;
+    text-decoration: underline;  
+  }
+}
+
 .cara {
   height: 100px;
   width: 100px;
-  transition: 1s;
-}
-
-.cara:hover {
-  transform: rotate(360deg);
+  transform:translateY(-80px);
 }
 
 
@@ -195,14 +204,30 @@ footer {
     flex-direction: column;
     justify-content: center;
   }
+
+  footer {
+    img {
+      display: none;
+    }
+
+  }
+
 }
 /* ----------------------------- */
 /* --- Mobile --- */
 @media screen and (max-width: 375px) {
   footer {
+      height: 260px;
       h5 {
           transform: translateY(1px);
       }
+      div {
+        transform: translateY(30px);
+      }
+  }
+
+  footer div ul li {
+    text-decoration: solid;
   }
   
   .nosotros .col-3 iframe {
