probando merge main

--- a/components/_nosotros.scss
+++ b/components/_nosotros.scss
@@ -38,3 +38,10 @@
     border-style: solid;
     border-radius: 10px;
   }
+
+  article {
+    div {
+      height: 100%;
+      width: auto;
+    }
+  }
