--- a/components/_global.scss
+++ b/components/_global.scss
@@ -81,11 +81,12 @@ article #right {
   border: solid 2px;
   border-radius: 5px;
   display: flex;
+  height: 90%;
   justify-content: center;
   align-items: center;
   font-size: 26px;
-  padding: 32px;
-  margin: 30px;
+  padding: 2rem;
+  margin: 32px ;
 }
 
 #parrafo {
