--- a/style.css
+++ b/style.css
@@ -72,11 +72,12 @@ article #right {
   border: solid 2px;
   border-radius: 5px;
   display: flex;
+  height: 90%;
   justify-content: center;
   align-items: center;
   font-size: 26px;
-  padding: 32px;
-  margin: 30px;
+  padding: 2rem;
+  margin: 32px;
 }
 
 #parrafo {
@@ -280,7 +281,7 @@ form {
   border: solid 2px;
   border-radius: 5px;
   padding: 5%;
-  margin-bottom: 5%;
+  margin: 5%;
 }
 .nosotros div .opm {
   height: 400px;
@@ -311,6 +312,7 @@ form {
   padding: 50px;
   border-style: solid;
   border-radius: 10px;
+  margin: 10px;
 }
 
 article div {
