--- a/components/_nosotros.scss
+++ b/components/_nosotros.scss
@@ -4,7 +4,7 @@
       border: solid 2px;
       border-radius: 5px;
       padding: 5%;
-      margin-bottom: 5%;
+      margin: 5%;
     }
     
       div .opm {
@@ -13,7 +13,7 @@
       transform: translateY(-30%);
     }
   }
-  
+
   .mesas {
     height: 270px;
     width: 100%;
@@ -37,6 +37,7 @@
     padding: 50px;
     border-style: solid;
     border-radius: 10px;
+    margin: 10px;
   }
 
   article {
